V3.1.9:
- Improved serial terminal.
- Added stop capture button.
- Fixed a lot of memory leaks.
- New trace manager (supports deletion of multiple items).
- Pip support.
- Support to projects/plugins in user's home.
- Test scripts.
- Improved code documentation.
- Code cleanups.
- New Glitch Explorer widget.
- Bandstop digital filter option (credits to Marc).
- Removed parentParam argument from many classes (some older scripts may need to delete it to come back to live) :-/
- Added buttons to load and save settings.

V3.1.8:
- Read/save buttons.
- Trace recorder.
- Graph widget: hairlines, grid, move, help, select trace, position.
- Check for updates.
- New Parameter class. API runs standalone now (especially the capture tool).
- Customizable key/trace colors.
- Results table with color gradient.
- Faster graphs plotting, especially in fast mode.
- Fixed a bug where highlighted traces for other keys would not show up.
- Trace Explorer moved to the main window as a settings dock.
- Bug fixes.

V3.0:
- Consolidate project (move traces to the project dir).
- Improved trace manager.
- Fixed GUI bugs with Mac OS X.
- New plugin architecture (should be much easier to add new modules).
- Bug fixes.
- Large code refactoring.