@@ -1,3 +1,2 @@
 V3.1.10
 - Logging
-- AckPattern info in .cfg
